test: Bring the BE up to date in case of tests
