# src/main/java/be/oz/personal_knowledge_manager/pkm/note/repository/NoteController.java
@@ -3,7 +3,10 @@ package be.oz.personal_knowledge_manager.pkm.note.repository;
 import be.oz.personal_knowledge_manager.api.NotesApi;
 import be.oz.personal_knowledge_manager.model.NoteDTO;
 import be.oz.personal_knowledge_manager.pkm.note.domain.Note;
-import be.oz.personal_knowledge_manager.pkm.note.usecase.*;
+import be.oz.personal_knowledge_manager.pkm.note.usecase.CreateOrUpdateNoteUseCase;
+import be.oz.personal_knowledge_manager.pkm.note.usecase.DeleteNoteByIdUseCase;
+import be.oz.personal_knowledge_manager.pkm.note.usecase.GetNoteByIdUseCase;
+import be.oz.personal_knowledge_manager.pkm.note.usecase.GetNotesUseCase;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -14,43 +17,13 @@ import java.util.List;
 @RequiredArgsConstructor
 public class NoteController implements NotesApi {
     private final GetNotesUseCase getNotesUseCase;
-    private final CreateNoteUseCase createNoteUseCase;
     private final GetNoteByIdUseCase getNoteByIdUseCase;
-    private final UpdateNoteByIdUseCase updateNoteByIdUseCase;
     private final DeleteNoteByIdUseCase deleteNoteByIdUseCase;
+    private final CreateOrUpdateNoteUseCase createOrUpdateNoteUseCase;
 
     @Override
-    public ResponseEntity<NoteDTO> updateNoteById(String id, NoteDTO noteDTO) {
-        var note = updateNoteByIdUseCase.execute(Note.builder()
-                .id(noteDTO.getId())
-                .title(noteDTO.getTitle())
-                .folder(noteDTO.getFolder())
-                .created(noteDTO.getCreated())
-                .updated(noteDTO.getUpdated())
-                .author(noteDTO.getAuthor())
-                .content(noteDTO.getContent())
-                .content_html(noteDTO.getContentHtml())
-                .source_url(noteDTO.getSourceUrl())
-                .build(), id);
-
-        var responseNoteDTO = new NoteDTO(
-                note.getId(),
-                note.getTitle(),
-                note.getFolder(),
-                note.getContent_html(),
-                note.getSource_url(),
-                note.getAuthor(),
-                note.getContent(),
-                note.getCreated(),
-                note.getUpdated()
-        );
-
-        return ResponseEntity.ok(responseNoteDTO);
-    }
-
-    @Override
-    public ResponseEntity<NoteDTO> createNote(NoteDTO noteDTO) {
-        var note = createNoteUseCase.execute(Note.builder()
+    public ResponseEntity<NoteDTO> createOrUpdateNote(NoteDTO noteDTO) {
+        var note = createOrUpdateNoteUseCase.execute(Note.builder()
                 .id(noteDTO.getId())
                 .title(noteDTO.getTitle())
                 .folder(noteDTO.getFolder())
@@ -61,8 +34,7 @@ public class NoteController implements NotesApi {
                 .content_html(noteDTO.getContentHtml())
                 .source_url(noteDTO.getSourceUrl())
                 .build());
-
-        var responseNoteDTO = new NoteDTO(
+        return ResponseEntity.ok(new NoteDTO(
                 note.getId(),
                 note.getTitle(),
                 note.getFolder(),
@@ -72,9 +44,7 @@ public class NoteController implements NotesApi {
                 note.getContent(),
                 note.getCreated(),
                 note.getUpdated()
-        );
-
-        return ResponseEntity.ok(responseNoteDTO);
+        ));
     }
 
     @Override
